cmd/cloud-hashing-apis/k8s/02-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-cloud-hashing-apis-v2-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/cloud-hashing-apis-v2
