cmd/cloud-hashing-apis/k8s/01-cloud-hashing-apis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-hashing-apis-v2
  namespace: kube-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cloud-hashing-apis-v2
  template:
    metadata:
      labels:
        app: cloud-hashing-apis-v2
    spec:
      containers:
      - name: cloud-hashing-apis-v2
        image: uhub.service.ucloud.cn/entropypool/cloud-hashing-apis-v2:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-hashing-apis-v2
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50140
    targetPort: 50140
  selector:
    app: cloud-hashing-apis-v2
