cmd/cloud-hashing-apis/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-apis-appid-userid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-apis-appid-userid
    k8s.kuboard.cn/workload: cloud-hashing-apis-appid-userid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-apis-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_appid_userid_rules
        paths:
          - path: /api/cloud-hashing-apis/v1/get/good/detail
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/submit/order
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/create/order/payment
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/get/order/detail
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/get/orders/detail/by/app/user
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/get/my/direct/invitations
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/get/good/reviews
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
    - host: api.xpool.top
      http: *http_appid_userid_rules
    - host: www.npool.top
      http: *http_appid_userid_rules
    - host: www.xpool.top
      http: *http_appid_userid_rules
    - host: www.procyon.vip
      http: *http_appid_userid_rules
    - host: procyon.vip
      http: *http_appid_userid_rules
    - host: dashboard.xpool.top
      http: *http_appid_userid_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-apis-appid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-apis-appid
    k8s.kuboard.cn/workload: cloud-hashing-apis-appid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-apis-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_appid_rules
        paths:
          - path: /api/cloud-hashing-apis/v1/get/goods/detail
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/get/recommend/goods/detail/by/app
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
          - path: /api/cloud-hashing-apis/v1/signup
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
    - host: api.xpool.top
      http: *http_appid_rules
    - host: www.npool.top
      http: *http_appid_rules
    - host: www.xpool.top
      http: *http_appid_rules
    - host: www.procyon.vip
      http: *http_appid_rules
    - host: procyon.vip
      http: *http_appid_rules
    - host: dashboard.xpool.top
      http: *http_appid_rules


---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-apis-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-apis
    k8s.kuboard.cn/workload: cloud-hashing-apis
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-apis-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-apis/version
            backend:
              serviceName: cloud-hashing-apis
              servicePort: 50140
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules
    - host: www.procyon.vip
      http: *http_rules
    - host: procyon.vip
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-cloud-hashing-apis-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/cloud-hashing-apis
