cmd/cloud-hashing-apis/k8s/03-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-apis-v2-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-apis-v2-traefik-app-user
    k8s.kuboard.cn/workload: cloud-hashing-apis-v2-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-apis-v2-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-apis-v2/v1/get/good
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/create/good
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/submit/order
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/create/order/payment
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/order
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/orders/by/app/user
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/my/direct/invitations
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/kyc/reviews
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/good/reviews
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/kyc/by/app/user
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/create/kyc
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/update/kyc
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-apis-v2-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-apis-v2-traefik-app
    k8s.kuboard.cn/workload: cloud-hashing-apis-v2-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-apis-v2-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_rules
        paths:
          - path: /api/cloud-hashing-apis-v2/v1/get/goods
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/get/recommend/goods/by/app
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/v1/signup
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
          - path: /api/cloud-hashing-apis-v2/version
            backend:
              serviceName: cloud-hashing-apis-v2
              servicePort: 50140
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
